css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;600;700;800;900&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser*/
*{
    /* margin: 5px; */
    padding: 0;
    box-sizing: border-box; 
    
}

body{
font-family: 'Inter', sans-serif;
}

.button {
    background-color: #6359FF;
    text-decoration: none;
    width: 40%;
    padding: 10px 20px;
    border-radius: 10px;
    border: none;
    color: white;
    font-weight: 600;
    cursor: pointer;
    outline: none;
    transition: .3s linear;
}

button:hover {
    background-color: #FF8C42;
    border: #FF8C42;
    transition: .3s linear;
    transform: translateY(-5px);
}


/* Header Element (with Logo and a Navbar */
header{
      width: 95%;
      height: 95%;
      margin-bottom: 0;
      margin: auto;
}

header nav{
    height: 80px;
    width: 100%;
    margin-top: 20px;
}


header nav ul{
   float: right;
   margin-right: 20px;    
}

header nav ul li{
    display: inline-block;
    line-height: 70px;
    margin:0 15px;
   
}

header nav ul li a {
    text-decoration: none;
    color: black;
    font-size: 15px;
    margin-bottom: 40px;
}

.checkbtn{
    font-size: 30px;
    color:black;
    float: right;
    line-height: 80px;
    margin: 20px;
    cursor: pointer;
    display: none;
}

#check{
    display: none;
}

header nav ul li a:hover {
    color: #6359FF;
}

#logo {
    height: 100px;
    width: auto;
}

/* Main Content */

main {
    width: 95%;
    height: 100%;
    margin: auto;
}

main img {
    min-width: 100%;
}

.content {
    position: relative;
    width: 100%;
    height: 100%;
    
}

 .content::before{
    content: '';
    position:absolute;
    width: 100%;
    height: 100%;
    background-image: url("assets/images/beachpicture.jpg");
    background-size: cover;
    border-radius: 10px;
    z-index: -1;
}

.content .cont_box{
    width: 500px;
    height: 600px;
    color: white;
    padding: 30px;
    margin-top: 25px;
    margin-left: auto;
    margin-right: 150px;   
    
}

.content .cont_box h1 {
    font-size: 500%;
    font-weight: 800;
    margin: 0;
   
}

.content .cont_box p{
    font-size: 150%;
    font-weight: 300;
}


.content .cont_box button {
   background-color: #6359FF;
   width: 60%;
   padding: 10px 20px;
   border-radius: 10px;
   border: none;
   color: white;
   font-weight: 600;
   cursor: pointer;
   outline: none;
   transition: .3s linear;
}

.content .cont_box button:hover{
    background-color: #FF8C42;
    border: #FF8C42;
    transition: .3s linear;
}

     
.explaintext {
    width: 50%;
    display: flex;
    justify-content: center;
    flex-direction: column;
 
}  

/* Frist text */
.explaintext h1 {
    font-size: 320%;
    padding: auto;
}
 
.explaintext p {
    font-size: 100%;
    font-weight: 300;
    margin-bottom: 20px;
}

/* Services Cards */
.cards-container{
    display: grid;
    grid-auto-flow: column;
    justify-content: space-between;
    margin-top: 150px;
    margin-bottom: 100px;
    width: fit-content;
    height: fit-content;
   
}

.cards-1, .cards-3{
    background-color: #ffffff;
    border-radius:8px;
    overflow:hidden;
    box-shadow: 5px 5px 20px rgb(201, 201, 201);
    margin: 20px;
    padding: 20px;
}

.cards-1{
    position: relative;
    bottom: 130px;
}

.cards-2{
    position: relative;
    bottom: 40px;
}

.cards-3{
    position: relative;
    bottom: 5px;
}

.cards-4{
    position: relative;
    bottom: -100px;
}

.fa-info-circle, .fa-check-circle, .fa-phone, .fa-map-signs {
    color: #6359FF
}

.card-container p {
    font-size:28px;
    padding: 16px;
    margin-bottom: 8px;
}


/* Destinations Card */
div span {
    height: 30px;
    width: 30px;
    color:white;
    background-color: #6359FF;
    border-radius: 50%;
    display: inline-block;
    font-size: larger;
    font-weight: 600;  
    text-align: center;
    padding-top: 3px;
}

.progress h3{
    display: inline-block;
    padding-left: 10px;
}

.progress p{
    padding-bottom: 20px;
}

.inner-text{
   padding-top: 10%;
   
}

.destination-card{
    width: 95%;
    padding: 50px;
    margin: auto;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 2.5rem;
    background-color:#B5C9C3;
    color: white;
    justify-content: space-between;
    border-radius: 10px;
    margin-top: 30px;
    box-shadow:  6 0 0 6 rgba(0, 0, 0, 0.2);
}

.destination-progress{
    width: 100%;
    height: 100%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}


/* Destinations-text */
.product-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1.5rem;
    align-items: start;
    margin: 50px 15px 0;
}

.card {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: auto;
    /* Auto height based on content, or you can set min-height for consistency */
    padding: 15px;
    box-shadow: 5px 5px 20px rgb(201, 201, 201);
    font-weight: 300;
    border-radius: 20px;
    justify-content: space-between;
    overflow: hidden;
    /* In case content exceeds the set height */
}

.card img {
    width: 100%;
    aspect-ratio: 5/2;
    object-fit: cover;
    border-radius: 10px;
    margin-bottom: 20px;
}

.card img {
    width: 100%;
    aspect-ratio: 5/2;
    object-fit: cover;
    border-radius: 10px;
    margin-bottom: 20px;
}

/* Search Box Booking.com */
.searchbox{
    width: 100%;
    height: 50%;
    padding-right: 100px;
    padding-left: 100px;
    margin-top: 40px;
    margin-bottom: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
    }
   



/* Conatact Us Section */
.contactus{
    width: 95%;
    padding: 50px;
    margin: auto;
    background-color: #B5C9C3;
    color: white;
    justify-content: space-between;
    border-radius: 10px;
    margin-top: 30px;
    margin-bottom:100px;
    box-shadow: 6 0 0 6 rgba(0, 0, 0, 0.2);
}

/* Footer */
footer{
    width: 90%;  
}

.footer-container{
    display: flex;
    align-items: center;  
    justify-content: space-between;
}

.footer-items a{
    color: black;
    font-size: 150%;
    justify-content: space-between;
    padding-left: 30px;
    margin-left: 40px;
}



@media only screen and (max-width: 700px) {
.checkbtn {
        display: block;
        font-size: 2rem;
        margin-top: 10px;
        margin-right: 20px;
        cursor: pointer;
    }

nav ul{
    display: grid;
    grid: template columns 1fr;
    gap: none;
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: #FF8C42;
    top:100px;
    left: -100%;
    text-align: center;
    transition: all .5s;
    z-index: 99;
}

#check:checked ~ ul{
    left: 0;
}

.content .cont_box{
    width: 100%;
    color:white;
}

.content .cont_box h1{
    font-size: 300%;
    font-weight: 800;
}

.content .cont_box p{
    font-size: 150%;
    font-weight: 300;
}

.content::before{
    height: 100%;
}

.explaintext  {
width: 100%;
justify-content: center;
    
}

.explaintext h1{
font-size: 150%;
align-content: center;

}

.cards-container{
    display:grid;
    grid-auto-flow: row;
    grid-auto-rows: min-content;
  
}

.cards-1,  .cards-3{
    width: 100%;
    margin: 0;
    

}

.cards-2, .cards-4{
    background-color: #ffffff;
    border-radius: 8px;
    box-shadow: 5px 5px 20px rgb(201, 201, 201);
    padding: 20px;
    
}

.cards-2, .cards-3{
    margin-bottom: 10px;
}

.cards-4{
    margin-bottom: 50px;
   
}

.destination-card{
    display: grid;
    gap: 2.5rem;
    grid-template-columns: repeat(1, 1fr); 
}


.destination-card button {
    width: 100%;
}

.progress h3{
    padding-left: 0;
}

.destinations-text{
    width: 95%;
    padding-right: 0;
    padding-left: 0;
    margin-bottom: 20px;
}


.product-grid{
    display: grid;
    grid-template-columns: repeat(1, 1fr);
}

.product-grid button {
    width: 100%;
}

.searchbox{
    width: 100%;
    padding-right: 0;
    padding-left: 0;
    margin-top: 20px;
    margin-bottom: 20px;
}

.searchbox h1{
    font-size: 200%;
}


.searchbox button{
    width: 100%;
}

.contactus button{
    width: 100%;

}


}

